# dbgame

./: .gitignore  compilerlol.nim  config.nims  project.nim
cppsrc/: .project  CMakeLists.txt  CMakeSettings.json  cppsrc.kdev4  datainterface.cpp  datainterface.h  glrender.cpp  main.cpp
cppsrc/.kdev4/: cppsrc.kdev4
cppsrc/cmake/: FindAssimp.cmake  FindEigen3.cmake  FindFBX.cmake  FindGEOS.cmake  FindODB.cmake  Findodb.cmake  MacPlistMacros.cmake  UseODB.cmake
cppsrc/dataapi/: CMakeLists.txt
cppsrc/dataapi/include/dbgame/: dataapi.h
cppsrc/dataapi/include/dbgame/dataapi/: data_opengl.h  data_rendering.h  spatial_traits.h  traits.h
cppsrc/dataapi/src/: epilogue.h  prologue.h  spatial_traits.cpp
cppsrc/rendering/: CMakeLists.txt
cppsrc/rendering/include/dbgame/rendering/: glrenderer.h  glshaders.h
cppsrc/rendering/shaders/: CMakeLists.txt  debug_vert.glsl
cppsrc/rendering/src/: .glshaders.cpp.kate-swp  gldata.h  glrenderer.cpp  glshaders.cpp
cppsrc/tests/: CMakeLists.txt  dataapi_tests.cpp  test_types.h.h
cppsrc/tools/: CMakeLists.txt  dbgt.cpp  fbx_import_assets.cpp  import_assets.cpp  import_assets.h  import_shaders.cpp  import_shaders.h
cppsrc/tools/commands/: CMakeLists.txt  import_assets_cmd.cpp  import_shaders_cmd.cpp
pysrc/dbgame/tools/sqlgen/: cpp.py  nim.py  parse.py  usertypes.py
pysrc/dbgame/tools/sqlgen/cpp/: loaders.cpp  loaders.h
pysrc/dbgame/ui/: DbGameQueryModel.py  DgbameQueryModel.py  main.py  resources.qrc
pysrc/dbgame/ui/qml/: Actions.qml  EditorMenuBar.qml  qml.qml  qml.qml.autosave  qml.qmlproject  qml.qmlproject.user.2537bd6  qmldir
sql/: dbgame.vsp  metadata.sql  opengl.sql  rendering.sql
src/: dataimport.nim  datainterface.nim  datatypes.nim  db.sql  imgui_impl.nim  poc.nim  renderogl.nim  sqlite3_utils.nim  sqlite3ext.nim  sqliteinterface.nim  sqlprocessor.nim  sqlscenegraph.nim
src/plugins/blender/: dbgame_add_object.py  dbgame_export.py  entity_node.py
src/plugins/max/: dbgame_entity.ms
test_data/: Blenderman.blend  zuendholz_forest.blend
